data/probe_workflow_lint_status.txt
schema=probe_workflow_hardening_status_v3
lint_exit_status=1
helper_test_exit_status=1
source_commit=3ce4d97a674bb5a830f68a0c923c67bf9452ff00
source_ref=refs/heads/main
workflow_run_id=29377334453
workflow_run_attempt=1
--- workflow lint ---
SyntaxError: Non-UTF-8 code starting with '\xca' in file /home/runner/work/erdos-3/erdos-3/src/lint_probe_workflows.py on line 201, but no encoding declared; see https://peps.python.org/pep-0263/ for details
--- helper tests ---
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
  File "/home/runner/work/erdos-3/erdos-3/src/lint_probe_workflows.py", line 201
    failures.extend(lint_status_blobïŋ―]ïŋ―\ïŋ―ïŋ―ïŋ―JJBïŋ―ïŋ―ÜX]ïŋ―[ïŋ―Tïŋ―ïŋ―Tïŋ―ïŋ―ïŋ―Sïŋ―ïŋ―[ïŋ―]\ïŋ―^
                                    ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xca in position 16: unexpected end of data
